[workspace]
resolver = "2"
members  = ["packages/*"]

[workspace.package]
edition     = "2021"
repository  = "https://github.com/uju-labs/uju-cw"
description = "A set of common packages used by Uju Labs when developing CosmWasm contracts."
authors     = ["Tasio Victoria tasiovictoria@ujulabs.com"]
license     = "BUSL-1.1"

[workspace.dependencies]
cosmwasm-schema = "2.1.1"
cosmos-sdk-proto = { version = "0.19.0", default-features = false }
cosmwasm-std = { version = "2.1.1", features = [
    "staking",
    "stargate",
    "cosmwasm_1_2",
] }
cw2 = "2.0.0"
cw-controllers = "2.0.0"
cw-storage-plus = "2.0.0"
cw-utils = "2.0.0"
prost = "0.11.5"
schemars = "0.8.21"
semver = "1.0.21"
serde = "1.0.204"
sha2 = "0.10"
sylvia = "1.2.1"
thiserror = "1.0.63"
uju-cw2-common = { path = "packages/uju-cw2-common" }
uju-cw2-index-query = { path = "packages/uju-cw2-index-query" }
uju-cw2-nft = { path = "packages/uju-cw2-nft" }
uju-cw2-tf = { path = "packages/uju-cw2-tf" }

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
